iptables.save
# Generated by iptables-save v1.6.0 on Thu Dec 14 10:14:48 2017
*mangle
:PREROUTING ACCEPT [1:64]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed on Thu Dec 14 10:14:48 2017
# Generated by iptables-save v1.6.0 on Thu Dec 14 10:14:48 2017
*filter
:OUTPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:INPUT ACCEPT [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -p gre -j ACCEPT
-A INPUT -p tcp -m tcp --dport 20080 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 20443 -j ACCEPT
# vnc
-A INPUT -p tcp -m tcp --dport 5901 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 6001 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 10011:10012 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 31200:31250 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 18989 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 990 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 1723 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 10053 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 25 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 110 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 143 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 587 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 995 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 993 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 465 -j ACCEPT
# atw
-A INPUT -p tcp -m tcp --dport 12085:12090 -j ACCEPT
# atw
-A INPUT -p udp -m udp --dport 12085:12090 -j ACCEPT
-A INPUT -p udp -m udp --dport 10053 -j ACCEPT
-A INPUT -p udp -m udp --dport 18989 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 1017 -j ACCEPT
-A INPUT -i ens3 -j DROP
COMMIT
# Completed on Thu Dec 14 10:14:48 2017
# Generated by webmin
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:DOCKER - [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed
